# ethereum_analysis

./: LICENSE  README.md  TODO.txt  config.yml  database.py  eth_code.py  eth_lib.py  eth_stats.py  eth_top_weeks.py  pyproject.toml  simulated_evm.py  tracer.py
evm_components/: parallel_bin.py  processor.py  storage.py  transaction.py
